--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
-    "outDir": "./dist",
-    "strict": true
+    "outDir": "./dist"
   },
   "include": ["src/**/*", "types/**/*"]
 }
