--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@timelostprototype/wow-client",
   "version": "0.0.2",
+  "repository": "github:timelosprototype/wow-client",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
